--- a/vilayattu.html
+++ b/vilayattu.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> செய்திகள் - Syedammal Seithigal</title>
+  <title>அரசியல் செய்திகள் - Syedammal Seithigal</title>
   <style>
     body {
       font-family: 'Latha', 'Arial', sans-serif;
@@ -74,7 +74,7 @@
 <body>
 
   <header>
-    <h1>விளையாட்டு செய்திகள்</h1>
+    <h1>அரசியல் செய்திகள்</h1>
     <p>Syedammal Seithigal</p>
   </header>
 
@@ -85,7 +85,7 @@
     <a href="tholil.html">தொழில்நுட்பம்</a>
     <a href="books.html">புத்தகங்கள்</a>
     <a href="special.html">சிறப்பு செய்திகள்</a>
-    <a href="video.html">வீடியோக்கள்</a>
+      <a href="video.html">வீடியோக்கள்</a>
   </nav>
 
   <div class="container">
